<resources>
    <string name="app_name">Mealme</string>
    <string name="navigation_drawer_open">Abrir Menú</string>
    <string name="navigation_drawer_close">Cerrar Menú</string>
    <string name="nav_header_title">¡Bienvenido!</string>
    <string name="nav_header_subtitle">-</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Salir</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Buscar Restaurantes</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_register">Registro</string>
    <string name="menu_detail">Detalle</string>
    <string name="button_close">Restaurantes Cercanos</string>
    <string name="button_all">Ver Todo</string>

    <!--  HOME PERMISSION REJECTED  -->
    <string name="ask_permissions">Otorgar permisos</string>
    <string name="we_need_permissions">Necesitamos permisos para poder mostrarte los restaurantes cercanos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_repeat_password">Repetir Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Falló el Login"</string>
    <string name="login_register">"Registrarse"</string>
    <string name="register_login">"Ingresar"</string>
    <!--  REGISTER STRINGS  -->
    <string name="register_action">"Registrarse"</string>
    <string name="dontHaveAccount">"Todavía no tenes cuenta?"</string>
    <string name="haveAccount">"Ya tenes cuenta?"</string>
    <string name="errorEmail">Ingrese un dirección válida</string>
    <string name="errorPassword">Ingrese una contraseña válida</string>
    <string name="errorRepeat">Debe coincidir con la contraseña</string>

    <string name="errorRepeatMsg">La contraseñas ingresadas deben ser iguales</string>
    <string name="errorRegister">Ocurrió un error al realizar el registro del usuario</string>
    <string name="errorFieldsRegister">Hay que llenar todos los campos para registrarse</string>

    <!-- SEARCH STRINGS -->
    <string name="msgSearch">Buscar por Nombre o Dirección</string>
    <string name="nameLabel">Nombre</string>
    <string name="addressLabel">Dirección</string>
    <string name="errorAddress">Debe ingresar por lo menos el nombre o la dirección (o ambos)</string>
    <string name="msgPermission">(Requiere permisos de geolocalización)</string>
    <string name="permissionTitle">Dar acceso a la ubicación</string>
    <string name="search">Buscar</string>


    <!--  RESTAURANT DETAIL STRING  -->
    <string name="add_review">"Agregar reseña"</string>
    <string name="add_favorite">"Agregar favorito"</string>
    <!-- FAVORITES LIST  -->
    <string name="favorites">"Favoritos"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>